# Nutriciolog_bot

./: .gitignore  config.py  database.py  gigachat_service.py  handlers.py  keyboards.py  logger.py  main.py  pyproject.toml  states.py
